--- a/src/index.html
+++ b/src/index.html
@@ -151,8 +151,48 @@
           
         </div>
       </section>
-    </main>
-
+    </main>	
+	<footer>
+      <div class="container">
+        <div class="row-footer">
+          <div class="footer-col">
+            <h4>Enterprise</h4>
+            <ul>
+              <li><a href="">Who are we ?</a></li>
+              <li><a href="">Our service</a></li>
+              <li><a href="">Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Help</h4>
+            <ul>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">transport</a></li>
+              <li><a href="">devolution</a></li>
+              <li><a href="">order status</a></li>
+              <li><a href="">Option of payment</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Enterprise</h4>
+            <div class="form-sub">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="type yout e-mail"
+              />
+              <button>Sign Up</button>
+            </div>
+            <div class="medias-socias">
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+              <a href=""><i class="fa-solid fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
