--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <h2 class="title">Ice Shop</h2>
+      <a href="#" class="logo"><img src="./image/logo.png"></a>
       <div class="" id="menu-id"></div>
       <ul class="navbar">
         <li><a href="#home" class="home-active">Home</a></li>
