--- a/src/index.html
+++ b/src/index.html
@@ -1,198 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-<script src="https://kit.fontawesome.com/a3fc4c0d0c.js" crossorigin="anonymous"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;900&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="stylesheet" href="./css/index.css" />
-    <title>Ice Shop</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <script src="https://kit.fontawesome.com/a3fc4c0d0c.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;900&display=swap" rel="stylesheet" />
 
-  <body>
-    <header>
-      <a href="#" class="logo"><img src="./image/logo.png"></a>
-      <div class="" id="menu-id"></div>
-      <ul class="navbar">
-        <li><a href="#home" class="home-active">Home</a></li>
-        <li><a href="#home">Clothes</a></li>
-        <li><a href="#home">Promotions</a></li>
-        <li><a href="#home">About us</a></li>
-      </ul>
-      <a href="./Login2.html" class="btn-login">Sign In</a>
-    </header>
-    <main>
-      <section class="slideshow">
-        <div class="slider">
-          <div class="slides">
-            <input type="radio" name="radio-btn" id="radio1" />
-            <input type="radio" name="radio-btn" id="radio2" />
-            <input type="radio" name="radio-btn" id="radio3" />
-            <div class="slide first">
-              <img
-                src="./image/Banner do YouTube Artesanal Bege Marrom-claro Branco.png"
-                alt=""
-              />
-            </div>
-            <div class="slide">
-              <img src="./image/Goodbye Winter (Banner Landscape.png" alt="" />
-            </div>
-            <div class="slide">
-              <img
-                src="./image/Blue Dynamic Fashion Special Sale Banner.png"
-                alt=""
-              />
-            </div>
+  <link rel="stylesheet" href="./css/index.css" />
+  <title>Ice Shop</title>
+</head>
 
-            <div class="navigation-auto">
-              <div class="auto-btn1"></div>
-              <div class="auto-btn2"></div>
-              <div class="auto-btn3"></div>
-            </div>
+<body>
+  <header>
+    <a href="#" class="logo"><img src="./image/logo.png"></a>
+    <div class="" id="menu-id"></div>
+    <ul class="navbar">
+      <li><a href="#home" class="home-active">Home</a></li>
+      <li><a href="#home">Clothes</a></li>
+      <li><a href="#home">Promotions</a></li>
+      <li><a href="#home">About us</a></li>
+    </ul>
+    <a href="./Login2.html" class="btn-login">Sign In</a>
+  </header>
+  <main>
+    <section class="slideshow">
+      <div class="slider">
+        <div class="slides">
+          <input type="radio" name="radio-btn" id="radio1" />
+          <input type="radio" name="radio-btn" id="radio2" />
+          <input type="radio" name="radio-btn" id="radio3" />
+          <div class="slide first">
+            <img src="./image/Banner do YouTube Artesanal Bege Marrom-claro Branco.png" alt="" />
           </div>
-        </div>
+          <div class="slide">
+            <img src="./image/Goodbye Winter (Banner Landscape.png" alt="" />
+          </div>
+          <div class="slide">
+            <img src="./image/Blue Dynamic Fashion Special Sale Banner.png" alt="" />
+          </div>
 
-        <div class="manual-navigation">
-          <label for="radio1" class="manual-btn"></label>
-          <label for="radio2" class="manual-btn"></label>
-          <label for="radio3" class="manual-btn"></label>
-        </div>
-      </section>
-      <section class="product">
-        <h2 class="product-category">Product</h2>
-        <button class="pre-btn"><i class="fa-solid fa-chevron-right"></i></button>
-        <button class="nxt-btn"><i class="fa-solid fa-chevron-right"></i></button>
-        <div class="product-container">
-          <div class="product-card">
-            <div class="product-image">
-              <img src="./image/produto.jpg" class="product-thumb" alt="" />
-              <button class="card-btn">add to wishlist</button>
-            </div>
-            <div class="product-info">
-              <h2 class="product-brand">brand</h2>
-              <p class="product-short-description">
-                a short line about the cloth..
-              </p>
-              <span class="price">$20</span
-              >
-            </div>
-          </div>
-<div class="product-card">
-            <div class="product-image">
-              <img src="./image/produto.jpg" class="product-thumb" alt="" />
-              <button class="card-btn">add to wishlist</button>
-            </div>
-            <div class="product-info">
-              <h2 class="product-brand">brand</h2>
-              <p class="product-short-description">
-                a short line about the cloth..
-              </p>
-              <span class="price">$20</span
-              >
-            </div>
-          </div>
-<div class="product-card">
-            <div class="product-image">
-              <img src="./image/produto.jpg" class="product-thumb" alt="" />
-              <button class="card-btn">add to wishlist</button>
-            </div>
-            <div class="product-info">
-              <h2 class="product-brand">brand</h2>
-              <p class="product-short-description">
-                a short line about the cloth..
-              </p>
-              <span class="price">$20</span
-              >
-            </div>
-          </div>
-<div class="product-card">
-            <div class="product-image">
-              <img src="./image/produto.jpg" class="product-thumb" alt="" />
-              <button class="card-btn">add to wishlist</button>
-            </div>
-            <div class="product-info">
-              <h2 class="product-brand">brand</h2>
-              <p class="product-short-description">
-                a short line about the cloth..
-              </p>
-              <span class="price">$20</span
-              >
-            </div>
-          </div>
-          
-        </div>
-      </section>
-<section class="product">
-        <h2 class="product-category">promotion</h2>
-        <button class="pre-btn"><i class="fa-solid fa-chevron-right"></i></button>
-        <button class="nxt-btn"><i class="fa-solid fa-chevron-right"></i></button>
-        <div class="product-container">
-          <div class="product-card">
-            <div class="product-image">
-              <span class="discount-tag">50% off</span>
-              <img src="./image/produto.jpg" class="product-thumb" alt="" />
-              <button class="card-btn">add to wishlist</button>
-            </div>
-            <div class="product-info">
-              <h2 class="product-brand">brand</h2>
-              <p class="product-short-description">
-                a short line about the cloth..
-              </p>
-              <span class="price">$20</span
-              ><span class="actual-price">$40</span>
-            </div>
-          </div>
-          
-        </div>
-      </section>
-    </main>	
-	<footer>
-      <div class="container">
-        <div class="row-footer">
-          <div class="footer-col">
-            <h4>Enterprise</h4>
-            <ul>
-              <li><a href="">Who are we ?</a></li>
-              <li><a href="">Our service</a></li>
-              <li><a href="">Policy</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Help</h4>
-            <ul>
-              <li><a href="">FAQ</a></li>
-              <li><a href="">transport</a></li>
-              <li><a href="">devolution</a></li>
-              <li><a href="">order status</a></li>
-              <li><a href="">Option of payment</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Enterprise</h4>
-            <div class="form-sub">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="type yout e-mail"
-              />
-              <button>Sign Up</button>
-            </div>
-            <div class="medias-socias">
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-              <a href=""><i class="fa-solid fa-envelope"></i></a>
-            </div>
+          <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
           </div>
         </div>
       </div>
-    </footer>
-    <script src="./js/index.js"></script>
-  </body>
+
+      <div class="manual-navigation">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+      </div>
+    </section>
+    <section class="product">
+      <h2 class="product-category">Product</h2>
+      <button class="pre-btn"><i class="fa-solid fa-chevron-right"></i></button>
+      <button class="nxt-btn"><i class="fa-solid fa-chevron-right"></i></button>
+      <div class="product-container">
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./image/outfit1.jpeg" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-description">
+              a short line about the cloth..
+            </p>
+            <span class="price">$20</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./image/outfit2.jpeg" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-description">
+              a short line about the cloth..
+            </p>
+            <span class="price">$20</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="./image/outfit3.jpeg" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-description">
+              a short line about the cloth..
+            </p>
+            <span class="price">$20</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <section class="product">
+      <h2 class="product-category">promotion</h2>
+      <button class="pre-btn"><i class="fa-solid fa-chevron-right"></i></button>
+      <button class="nxt-btn"><i class="fa-solid fa-chevron-right"></i></button>
+      <div class="product-container">
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="./image/outfit2.jpeg" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-description">
+              a short line about the cloth..
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="container">
+      <div class="row-footer">
+        <div class="footer-col">
+          <h4>Enterprise</h4>
+          <ul>
+            <li><a href="">Who are we ?</a></li>
+            <li><a href="">Our service</a></li>
+            <li><a href="">Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Help</h4>
+          <ul>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">transport</a></li>
+            <li><a href="">devolution</a></li>
+            <li><a href="">order status</a></li>
+            <li><a href="">Option of payment</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Enterprise</h4>
+          <div class="form-sub">
+            <input type="email" name="email" id="email" placeholder="type yout e-mail" />
+            <button>Sign Up</button>
+          </div>
+          <div class="medias-socias">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-solid fa-envelope"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="./js/index.js"></script>
+</body>
+
 </html>
