--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <a href="#" class="logo"><img src="./image/logo.png"></a>
+    <a href="#" class="logo"><img src="./image/Ice_Shop-removebg-preview.png"></a>
     <div class="" id="menu-id"></div>
     <ul class="navbar">
       <li><a href="#home" class="home-active">Home</a></li>
